--- a/sharkspotter.html
+++ b/sharkspotter.html
@@ -8,7 +8,7 @@
                 font-size: 40px;
                 font-family: 'Courier New', Courier, monospace;
                 color: #B5927F; 
-                background: palegoldenrod;    
+                background: rgb(226, 221, 169);    
             }
             .column {
                 float: left;
@@ -29,20 +29,13 @@
                 font-family: 'Courier New', Courier, monospace;
                 color: #B5927F;
             }
-            html,
-            body {
-                height: 100%;
-                margin: 0;
-                padding: 0;
-                background-color: #FFEBCD;
-            }
 
         </style>    
     </head>
     <body>
         <h1> Shark Spotter along the False Bay coastline in South Africa </h1>
         <div class="row">
-            <div class="column" style="background-color:#aaa;">
+            <div class="column">
               <p>This map shows the location of Shark Spotters along the False Bay coastline in South Africa, 
                 as well as all reported white shark sightings between September 8, 2012, 
                 and February 22, 2013. Shark Spotters are positioned at strategic points along 
@@ -50,7 +43,7 @@
                 This spotter is in radio contact with another spotter on the beach. 
                 If a shark is seen along the beach, the spotter sounds a siren and raises a specific color-coded flag, upon which swimmers are requested to leave the water.</p>
             </div>
-            <div class="column" style="background-color:#bbb;">
+            <div class="column">
               <iframe src="https://www.google.com/maps/d/u/0/embed?mid=1s3-ZnIjWigbVjRxMgE-bKNc1cDqcHu2V" width="640" height="480"></iframe>
             </div>
 
