--- a/sharkspotter.html
+++ b/sharkspotter.html
@@ -14,7 +14,6 @@
                 float: left;
                 width: 50%;
                 padding: 10px;
-                height: 300px; /* Should be removed. Only for demonstration */
             }
 
             /* Clear floats after the columns */
@@ -29,13 +28,20 @@
                 font-family: 'Courier New', Courier, monospace;
                 color: #B5927F;
             }
+            html,
+            body {
+                height: 100%;
+                margin: 0;
+                padding: 0;
+                background-color: #FFEBCD;
+            }
 
         </style>    
     </head>
     <body>
         <h1> Shark Spotter along the False Bay coastline in South Africa </h1>
         <div class="row">
-            <div class="column">
+            <div class="column" >
               <p>This map shows the location of Shark Spotters along the False Bay coastline in South Africa, 
                 as well as all reported white shark sightings between September 8, 2012, 
                 and February 22, 2013. Shark Spotters are positioned at strategic points along 
