--- a/sharkspotter.html
+++ b/sharkspotter.html
@@ -11,9 +11,9 @@
                 background: rgb(226, 221, 169);    
             }
             .column {
-                float: left;
-                width: 50%;
+                flex: 50%;
                 padding: 10px;
+
             }
 
             /* Clear floats after the columns */
