--- a/sharkspotter.html
+++ b/sharkspotter.html
@@ -11,7 +11,8 @@
                 background: rgb(226, 221, 169);    
             }
             .column {
-                flex: 50%;
+                float: left;
+                width: 50%;
                 padding: 10px;
 
             }
@@ -50,7 +51,7 @@
                 If a shark is seen along the beach, the spotter sounds a siren and raises a specific color-coded flag, upon which swimmers are requested to leave the water.</p>
             </div>
             <div class="column">
-              <iframe src="https://www.google.com/maps/d/u/0/embed?mid=1s3-ZnIjWigbVjRxMgE-bKNc1cDqcHu2V" width="640" height="480"></iframe>
+              <iframe src="https://www.google.com/maps/d/u/0/embed?mid=1s3-ZnIjWigbVjRxMgE-bKNc1cDqcHu2V" ></iframe>
             </div>
 
         </div>
