--- a/sharkspotter.html
+++ b/sharkspotter.html
@@ -34,6 +34,12 @@
                 padding: 0;
                 background-color: #FFEBCD;
             }
+            footer {
+                text-align: center;
+                padding: 3px;
+                color: white;
+                background-color: #DABCB2;
+            }
 
         </style>    
     </head>
