--- a/sharkspotter.html
+++ b/sharkspotter.html
@@ -12,13 +12,13 @@
             }
             .column1 {
                 float: left;
-                width: 50%;
+                width: 40%;
                 padding: 10px;
 
             }
             .column2{
                 float: right;
-                width: 50%;
+                width: 40%;
                 padding: 10px;                
             }
             p{
@@ -55,8 +55,10 @@
         </div>
         <div class="column2">
               <iframe src="https://www.google.com/maps/d/u/0/embed?mid=1s3-ZnIjWigbVjRxMgE-bKNc1cDqcHu2V" width="640" height="480"></iframe>
-            </div>
-
         </div>
+        <footer>
+            <p>Photo Credit by Hyerin and This website is created by Hyerin Mun as well!</p>
+          </footer>
+          
     </body>
 </html>
