--- a/sharkspotter.html
+++ b/sharkspotter.html
@@ -8,9 +8,10 @@
                 font-size: 40px;
                 font-family: 'Courier New', Courier, monospace;
                 color: #B5927F; 
-                background: rgb(226, 221, 169);    
+                background:#DABCB2;    
             }
             .column1 {
+                margin: 30px;
                 float: left;
                 width: 40%;
                 padding: 10px;
@@ -35,8 +36,12 @@
                 background-color: #FFEBCD;
             }
             footer {
+                position: fixed;
+                left: 0;
+                bottom: 0;
                 text-align: center;
                 padding: 3px;
+                width: 100%;
                 color: white;
                 background-color: #DABCB2;
             }
