--- a/sharkspotter.html
+++ b/sharkspotter.html
@@ -8,7 +8,8 @@
                 font-size: 40px;
                 font-family: 'Courier New', Courier, monospace;
                 color: #B5927F; 
-                background:#DABCB2;    
+                background:#DABCB2; 
+                text-align: center;   
             }
             .column1 {
                 margin: 60px;
@@ -64,7 +65,7 @@
         </div>
         <footer>
             <p>Photo Credit by Hyerin and This website is created by Hyerin Mun as well!</p>
-          </footer>
+        </footer>
           
     </body>
 </html>
