--- a/sharkspotter.html
+++ b/sharkspotter.html
@@ -7,8 +7,8 @@
             h1 {
                 font-size: 40px;
                 font-family: 'Courier New', Courier, monospace;
-                color: #B5927F; 
-                background:#DABCB2; 
+                color: #F98125; 
+                background:#2C599D; 
                 text-align: center;   
             }
             .column1 {
@@ -22,7 +22,7 @@
                 float: right;
                 width: 40%;
                 padding: 10px;   
-                margin: 50px;             
+                margin: 70px;             
             }
             p{
 
@@ -35,7 +35,7 @@
                 height: 100%;
                 margin: 0;
                 padding: 0;
-                background-color: #FFEBCD;
+                background-color: #5B84C4;
             }
             footer {
                 position: fixed;
@@ -44,8 +44,8 @@
                 text-align: center;
                 padding: 3px;
                 width: 100%;
-                color: white;
-                background-color: #DABCB2;
+                color: #F98125;
+                background-color: #2C599D;
             }
 
         </style>    
@@ -64,7 +64,7 @@
               <iframe src="https://www.google.com/maps/d/u/0/embed?mid=1s3-ZnIjWigbVjRxMgE-bKNc1cDqcHu2V" width="640" height="480"></iframe>
         </div>
         <footer>
-            <p>Photo Credit by Hyerin and This website is created by Hyerin Mun as well!</p>
+            <p>Source: Google Maps Tutorial</p>
         </footer>
           
     </body>
