--- a/sharkspotter.html
+++ b/sharkspotter.html
@@ -7,8 +7,8 @@
             h1 {
                 font-size: 40px;
                 font-family: 'Courier New', Courier, monospace;
-                color: #F98125; 
-                background:#2C599D; 
+                color: white; 
+                background:#0c1a32; 
                 text-align: center;   
             }
             .column1 {
@@ -28,14 +28,14 @@
 
                 font-size: 15px;
                 font-family: 'Courier New', Courier, monospace;
-                color: #B5927F;
+                color: #F98125;
             }
             html,
             body {
                 height: 100%;
                 margin: 0;
                 padding: 0;
-                background-color: #5B84C4;
+                background-color: #3875e3;
             }
             footer {
                 position: fixed;
@@ -44,8 +44,8 @@
                 text-align: center;
                 padding: 3px;
                 width: 100%;
-                color: #F98125;
-                background-color: #2C599D;
+                color: white;
+                background-color: #0c1a32;
             }
 
         </style>    
