--- a/option1.html
+++ b/option1.html
@@ -26,7 +26,7 @@
       }
       h1 {
         text-align: center;
-        font-size: 40px;
+        font-size: 45px;
         font-family: 'Courier New', Courier, monospace;
         color: #B5927F; 
       }
@@ -134,7 +134,7 @@
     <h1> HYERIN in EUROPE in 2016 </h1>  
     <h4> Follow me! I will show you the beautiful places I've been in Europe in 2016!</h4>
     <h6> The six markers are the places I've been in Europe with my family. From London, France, Switzerland, Italy, Croatia, to Czechia! 
-      <br> Also, you can see the pictures below that I took while I traveled! </h6>
+      <br> Also, you can see some pictures below I took while I traveled! </h6>
     <div id="map"></div>
 
     <div class="wrapper">
