--- a/sharkspotter.html
+++ b/sharkspotter.html
@@ -33,9 +33,10 @@
             html,
             body {
                 height: 100%;
-                margin: 0;
-                padding: 0;
-                background-color: #3875e3;
+                background-image: url("images/shark.jpg");
+                background-attachment: fixed;
+                background-repeat: no-repeat;
+                background-size: cover;
             }
             footer {
                 position: fixed;
