--- a/sharkspotter.html
+++ b/sharkspotter.html
@@ -8,7 +8,7 @@
                 font-size: 40px;
                 font-family: 'Courier New', Courier, monospace;
                 color: white; 
-                background:#0c1a32; 
+                background:#3875e3; 
                 text-align: center;   
             }
             .column1 {
@@ -22,13 +22,13 @@
                 float: right;
                 width: 40%;
                 padding: 10px;   
-                margin: 70px;             
+                margin: 30px;             
             }
             p{
 
                 font-size: 15px;
                 font-family: 'Courier New', Courier, monospace;
-                color: #F98125;
+                color: white;
             }
             html,
             body {
@@ -46,7 +46,7 @@
                 padding: 3px;
                 width: 100%;
                 color: white;
-                background-color: #0c1a32;
+                background-color: #3875e3;
             }
 
         </style>    
