Change paragraph in bold

--- a/sharkspotter.html
+++ b/sharkspotter.html
@@ -26,7 +26,7 @@
             }
             p{
 
-                font-size: 15px;
+                font-size: 20px;
                 font-family: 'Courier New', Courier, monospace;
                 color: white;
             }
@@ -54,12 +54,12 @@
     <body>
         <h1> Shark Spotter along the False Bay coastline in South Africa </h1>
         <div class="column1" >
-              <p>This map shows the location of Shark Spotters along the False Bay coastline in South Africa, 
+              <p><b>This map shows the location of Shark Spotters along the False Bay coastline in South Africa, 
                 as well as all reported white shark sightings between September 8, 2012, 
                 and February 22, 2013. Shark Spotters are positioned at strategic points along 
                 the Cape Peninsula. A spotter is placed on the mountain with polarised sunglasses and binoculars. 
                 This spotter is in radio contact with another spotter on the beach. 
-                If a shark is seen along the beach, the spotter sounds a siren and raises a specific color-coded flag, upon which swimmers are requested to leave the water.</p>
+                If a shark is seen along the beach, the spotter sounds a siren and raises a specific color-coded flag, upon which swimmers are requested to leave the water.</b></p>
         </div>
         <div class="column2">
               <iframe src="https://www.google.com/maps/d/u/0/embed?mid=1s3-ZnIjWigbVjRxMgE-bKNc1cDqcHu2V" width="640" height="480"></iframe>
