Change bottom size

--- a/option1.html
+++ b/option1.html
@@ -43,6 +43,7 @@
       .wrapper{
           width: 75%;
           margin: 0px auto;
+          bottom: 30%;
       }
       .entry{
           width: 400px;
