--- a/option1.html
+++ b/option1.html
@@ -43,14 +43,14 @@
       .wrapper{
           width: 75%;
           margin: 0px auto;
-          bottom: 30%;
+          bottom: 100px;
       }
       .entry{
           width: 400px;
           float:left;
           margin:10px;
           height: 300px;
-          bottom: 30%;
+          bottom: 100px;
       }
       figure{
           display: block;
