--- a/option1.html
+++ b/option1.html
@@ -63,6 +63,7 @@
           width: 400px;
           height: 300px;
           border: 1px soild burlywood;
+          bottom: 100px;
       }
       figcaption{
           padding-left: 0px;
