--- a/option1.html
+++ b/option1.html
@@ -40,6 +40,9 @@
         font-size: 15px;
         font-family:'Courier New', Courier, monospace;
     }
+      .bottom{
+        bottom: 100px;
+      }
       .wrapper{
           width: 75%;
           margin: 0px auto;
@@ -57,13 +60,12 @@
           margin:10px;
           padding: 0px;
           text-align: left;
-          bottom: 100px;
       }
       figure img{
           width: 400px;
           height: 300px;
           border: 1px soild burlywood;
-          bottom: 100px;
+
       }
       figcaption{
           padding-left: 0px;
@@ -137,34 +139,36 @@
     <h6> The six markers are the places I've been in Europe with my family. From London, France, Switzerland, Italy, Croatia, to Czechia! 
       <br> Also, you can see some pictures below I took while I traveled! </h6>
     <div id="map"></div>
-
-    <div class="wrapper">
-      <div class = "entry">
-        <figure><img src="images/london.jpg" alt="london" />
-              <figcaption> London, England: Big ben </figcaption>
-        </figure>
-      </div>
-      <div class = "entry">
-        <figure><img src="images/paris.jpg" alt="paris" />
-              <figcaption> Paris, France: Eiffel Tower </figcaption>
-        </figure>
-      </div>      <div class = "entry">
-        <figure><img src="images/switzerland.jpg" alt="swizerland" />
-              <figcaption> Zurich, Switzerland: One of village in Zurich </figcaption>
-        </figure>
-      </div>      <div class = "entry">
-        <figure><img src="images/italy.jpg" alt="italy" />
-              <figcaption> Venice, Italy: Venice canals  </figcaption>
-        </figure>
-      </div>      <div class = "entry">
-        <figure><img src="images/croatia.jpg" alt="croatia" />
-              <figcaption> Zagreb, Croatia: Beautiful Croatia </figcaption>
-        </figure>
-      </div>      <div class = "entry">
-        <figure><img src="images/prague.jpg" alt="prague" />
-              <figcaption> Prague, Czech Republic: Beautiful view of Prague </figcaption>
-        </figure>
-      </div>
+    
+    <div class= "bottom">
+      <div class="wrapper">
+        <div class = "entry">
+          <figure><img src="images/london.jpg" alt="london" />
+                <figcaption> London, England: Big ben </figcaption>
+          </figure>
+        </div>
+        <div class = "entry">
+          <figure><img src="images/paris.jpg" alt="paris" />
+                <figcaption> Paris, France: Eiffel Tower </figcaption>
+          </figure>
+        </div>      <div class = "entry">
+          <figure><img src="images/switzerland.jpg" alt="swizerland" />
+                <figcaption> Zurich, Switzerland: One of village in Zurich </figcaption>
+          </figure>
+        </div>      <div class = "entry">
+          <figure><img src="images/italy.jpg" alt="italy" />
+                <figcaption> Venice, Italy: Venice canals  </figcaption>
+          </figure>
+        </div>      <div class = "entry">
+          <figure><img src="images/croatia.jpg" alt="croatia" />
+                <figcaption> Zagreb, Croatia: Beautiful Croatia </figcaption>
+          </figure>
+        </div>      <div class = "entry">
+          <figure><img src="images/prague.jpg" alt="prague" />
+                <figcaption> Prague, Czech Republic: Beautiful view of Prague </figcaption>
+          </figure>
+        </div>
+      </div>  
     </div>      
   </body>
 </html>
